tests/baselines/reference/parserArrowFunctionExpression15(target=es3).errors.txt
error TS5108: Option 'target=ES3' has been removed. Please remove it from your configuration.
fileJs.js(1,18): error TS8010: Type annotations can only be used in TypeScript files.


!!! error TS5108: Option 'target=ES3' has been removed. Please remove it from your configuration.
==== fileJs.js (1 errors) ====
    false ? (param): string => param : null // Not legal JS; "Unexpected token ':'" at last colon
                     ~~~~~~
!!! error TS8010: Type annotations can only be used in TypeScript files.
    
==== fileTs.ts (0 errors) ====
    false ? (param): string => param : null
    